--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.1",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "uuid": "^8.3.2",
